fix overflow"

--- a/components/BlockBuilder.module.scss
+++ b/components/BlockBuilder.module.scss
@@ -28,6 +28,10 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+
+  @media (max-width: 768px) {
+    overflow: hidden;
+  }
 }
 
 .directionCol2 {
@@ -37,6 +41,7 @@
 
   @media (max-width: 768px) {
     grid-template-columns: repeat(1, 1fr);
+    overflow: hidden;
   }
 }
 
@@ -51,6 +56,7 @@
 
   @media (max-width: 768px) {
     grid-template-columns: repeat(1, 1fr);
+    overflow: hidden;
   }
 }
 
@@ -76,5 +82,13 @@
   @media (max-width: 768px) {
     flex-direction: column;
     gap: 1rem;
+  }
+}
+
+.directionColumn {
+  display: flex;
+
+  @media (max-width: 1032px) {
+    overflow: hidden;
   }
 }
